RESOLVED FIXED37964
Fix a typo in comments - Korean encoding name is windows-949, not windows-939
https://bugs.webkit.org/show_bug.cgi?id=37964
Summary Fix a typo in comments - Korean encoding name is windows-949, not windows-939
Alexey Proskuryakov
Reported 2010-04-21 19:23:25 PDT
Patch forthcoming.
Attachments
proposed fix (1.74 KB, patch)
2010-04-21 19:27 PDT, Alexey Proskuryakov
hamaji: review+
Alexey Proskuryakov
Comment 1 2010-04-21 19:27:27 PDT
Created attachment 54014 [details] proposed fix
Shinichiro Hamaji
Comment 2 2010-04-21 21:17:44 PDT
Comment on attachment 54014 [details] proposed fix Looks good.
Alexey Proskuryakov
Comment 3 2010-04-21 21:47:55 PDT
Committed revision 58052.
Note You need to log in before you can comment on or make changes to this bug.