        Reviewed by Shinichiro Hamaji.

https://bugs.webkit.org/show_bug.cgi?id=37964
        Fix a typo in comments - Korean encoding name is windows-949, not windows-939

        * WebView/WebPreferences.mm: (+[WebPreferences _setInitialDefaultTextEncodingToSystemEncoding]):



Canonical link: https://commits.webkit.org/49333@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58052 268f45cc-cd09-0410-ab3c-d52691b4dbfc